--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,8 @@ dependencies {
 
     /** https://github.com/MindorksOpenSource/PRDownloader*/
     implementation 'com.mindorks.android:prdownloader:0.6.0'
+
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+
 }
